log/build_2024-05-31_14-05-52/ros_ads_loop/stderr.log
  File "/home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/ADS_ROS_CLASS.py", line 36
    def super().__init__(self):
               ^
SyntaxError: expected ':'

